--- a/markdown/v8.md
+++ b/markdown/v8.md
@@ -23,3 +23,10 @@ V8的垃圾回收策略主要基于分代式垃圾回收机制。
 
 在V8中，主要将内存分为新生代和老生代两代。V8堆的整体大小就是新生代和老生代使用的内存空间。前面提到的--max-old-space-size命令行参数可以用于设置老生代内存空间的最大值，--max-new-space-size可以用于设置新生代内存空间的大小。
 ```
+|---------------------|----------------------|
+|     新生代的         |       老生代的       |
+|     内存空间         |       内存空间       |
+|---------------------|----------------------|
+
+                 V8的分代示意图
+```
