--- a/markdown/v8.md
+++ b/markdown/v8.md
@@ -36,4 +36,4 @@ V8的垃圾回收策略主要基于分代式垃圾回收机制。
 Cheney算法是一种采用复制的方法实现的垃圾回收算法，它将堆内存一分为二，每一部分空间称为semispace。在这两个semispace空间中,只有一个处于使用中，另一个处于闲置状态，处于使用状态的空间称为Form空间，处于闲置状态的空间称为To空间，当我们分配对象时，先是在From空间中进行分配，当开始进行垃圾回收时，会检查From空间中的存活对象，这些存活对象将被复制到To空间中,而非存活对象占用的空间将被释放。复制完成后，From空间和To空间的角色发生对换。
 简而言之，在垃圾回收的过程中，就是通过将存活对象在两个semiscape空间之间进行复制。
 Scanvenge的缺点是只能使用堆内存中的一半
-![alt](https://static01.imgkr.com/temp/c44d11d07e9748ea9fb785619d5ca9b3.jpg)
+![alt](./img/up.jpg)
